[gd_scene load_steps=4 format=2]

[ext_resource path="res://KenneyAssets/kenney_simplespace/PNG/Retina/ship_E.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://Scenes/UI.tscn" type="PackedScene" id=3]

[node name="Player" type="KinematicBody2D"]
scale = Vector2( 0.5, 0.5 )
collision_mask = 2
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -47.9336, 32.9968, -0.0400848, -47.4432, 48.6473, 33.526, 32.771, 48.8731, -0.0400848, 33.526, -31.7927, 48.6085 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( -3.60278, 0 )
current = true
zoom = Vector2( 1.2, 1.3 )
limit_left = 0
limit_right = 1000
limit_bottom = 1000
smoothing_enabled = true

[node name="UI" parent="." instance=ExtResource( 3 )]
position = Vector2( 27.2487, -426.895 )

[node name="Mega_boost_Timer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="DeathZone" type="VisibilityNotifier2D" parent="."]

[connection signal="move_player" from="UI" to="." method="_on_UI_move_player"]
[connection signal="restart_game" from="UI" to="." method="_on_UI_restart_game"]
[connection signal="timeout" from="Mega_boost_Timer" to="." method="_on_Mega_boost_Timer_timeout"]
[connection signal="screen_exited" from="DeathZone" to="." method="_on_DeathZone_screen_exited"]
